--- a/HTML/01.html
+++ b/HTML/01.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
 
     <!-- PURPOSE -->
@@ -28,5 +30,82 @@
 
     <h2>Paragrahps, bold and italic</h2>
 
+    <p>
+        Lorem ipsum <i>dolor sit</i> amet, consectetur <em>adipisicing elit</em>. Pariatur, dolor.
+    </p>
+
+    <p>
+        Lorem ipsum <b>dolor sit</b> amet consectetur <strong>adipisicing elit</strong>. Sapiente quod quis recusandae
+        consectetur esse similique ullam non doloribus ex voluptate?
+    </p>
+
+    <!-- LINKS -->
+
+    <h2>Links</h2>
+
+    <a href="http://google.com">Go to Google</a><br>
+    <a target="_blank" href="http://google.com">Open Google in new tab</a><br>
+    <a href="02.html">Go to 02.html</a><br>
+    <a href="MyFolder/03.html">Go to 03.html</a>
+
+
+    <!-- LINE BREAKS -->
+
+    
+    <h2>Line breaks</h2>
+
+    Äpple<br />
+    Banan<br>
+    Gurka
+
+    <!-- IMAGES -->
+
+    <h2>Images</h2>
+
+    <img src="cat1.jpg" height="200" alt="An orange cat">
+    <!-- exercise start -->
+    <!-- exercise end -->
+    <a href="02.html">
+        <img src="Images/cat3.jpeg" height="200" alt="">
+    </a>
+
+    <!-- LISTS -->
+
+    <h2>Lists</h2>
+
+    <ul>
+        <li>Banana</li>
+        <li>Apple</li>
+        <li>Lemon</li>
+    </ul>
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <!-- TABLES -->
+
+    <h2>Tables</h2>
+
+    <a href="https://en.wikipedia.org/wiki/List_of_giant_pandas">
+        Famous living giant pandas
+
+    </a>
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <!-- DIV & SPAN -->
+
+    <h2>Div and span</h2>
+
+    <div>One div</div>
+    <div>One div</div>
+    <div>One div</div>
+
+    <span>One span</span>
+    <span>One span</span>
+    <span>One span</span>
+
 </body>
+
 </html>
