--- a/HTML/02.html
+++ b/HTML/02.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>02</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>This is 02.html</h1>
+
+    <!-- PURPOSE -->
+
+    <h1>Purpose</h1>
+
+    <p>Forms is an essential part of HTML. At the end some special HTML5-tags is shown </p>
+
+    <!-- INPUT FIELDS -->
+
+    <h2>Input fields</h2>
+
+    <input type="button" value="Okay">
+    <input type="date">
+    <input type="datetime-local">
+    <input type="email"> <!-- Will validate when you press OK -->
+    <input type="number">
+    <input type="password">
+    <input type="text">
+    <input type="url"> <!-- Will validate when you press OK -->
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <h2>Checkboxes</h2>
+
+    WiFi <input type="checkbox"><br>
+    TV <input type="checkbox"><br>
+
+    <h2>Checkboxes with labels</h2>
+
+    <label for="playstation">Playstation</label>
+    <input id="playstation" type="checkbox"> <br>
+
+    <label>
+        Dishwasher<input type="checkbox">
+    </label>
+
+    <br>
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <h2>Select boxes</h2>
+
+    <select>
+        <option>Banana</option>
+        <option>Tomato</option>
+        <option>Kiwi</option>
+    </select>
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <h2>Button</h2>
+
+    <button>Yes box</button>
+
+    <h2>Text area</h2>
+
+    <textarea>Some text</textarea>
+
+    <!-- AUDIO AND VIDEO-->
+
+    <h2>Audio and video</h2>
+
+    <video>
+        <source src="Videos/bear.mp4" type="video/mp4">
+    </video>
+
+    <video controls>
+        <source src="Videos/buck-bunny.mp4" type="video/mp4">
+    </video>
+
+    <!-- exercise start -->
+    <!-- exercise end -->
+
+    <!-- FIGURE -->
+
+    <h2>Figures</h2>
+
+    <figure>
+        <img src="Images/cat2.webp" height="200" alt="">
+        <figcaption>
+            A white cat staring at me with blurred green background
+            <!-- Describes a "figure": a picture, diagram or graph -->
+        </figcaption>
+    </figure>
 
     <a href="01.html">Go back</a>
 </body>
+
 </html>
