--- a/HTML/01.html
+++ b/HTML/01.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>01</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -22,21 +21,18 @@
 
     <h2>Headers</h2>
 
-    <h3>Another headeraa</h3>
+    <h3>Another header</h3>
 
     <h4>Yet another header</h4>
 
     <!-- PARAGRAPHS, BOLD and ITALIC -->
 
-    <h2>Paragrahps, bold and italic</h2>
-
+    <h2>Paragraphs, bold and italic</h2>
     <p>
-        Lorem ipsum <i>dolor sit</i> amet, consectetur <em>adipisicing elit</em>. Pariatur, dolor.
+        Adipisicing <i>elit</i>. Perferendis <em>ex</em>, ut facere culpa, ducimus nisi inventore corporis officiis.
     </p>
-
     <p>
-        Lorem ipsum <b>dolor sit</b> amet consectetur <strong>adipisicing elit</strong>. Sapiente quod quis recusandae
-        consectetur esse similique ullam non doloribus ex voluptate?
+        Hic <b>minus quasi</b> unde <strong>voluptatem</strong> repudiandae! Exercitationem, corrupti provident.
     </p>
 
     <!-- LINKS -->
@@ -44,35 +40,32 @@
     <h2>Links</h2>
 
     <a href="http://google.com">Go to Google</a><br>
-    <a target="_blank" href="http://google.com">Open Google in new tab</a><br>
+    <a target="_blank" href="http://google.com">Open Google in a new tab</a><br>
     <a href="02.html">Go to 02.html</a><br>
-    <a href="MyFolder/03.html">Go to 03.html</a>
-
+    <a href="MyFolder/03.html">Go to 03.html</a><br>
 
     <!-- LINE BREAKS -->
 
-    
     <h2>Line breaks</h2>
 
     Äpple<br />
     Banan<br>
-    Gurka
+    Gurka<br>
 
-    <!-- IMAGES -->
+    <!-- IMAGES-->
 
     <h2>Images</h2>
 
-    <img src="cat1.jpg" height="200" alt="An orange cat">
+    <img src="cat1.jpg" height="200">
     <!-- exercise start -->
+    <img src="Images/cat2.webp" height="200">
     <!-- exercise end -->
-    <a href="02.html">
-        <img src="Images/cat3.jpeg" height="200" alt="">
-    </a>
+    <a href="02.html"><img src="Images/cat3.jpeg" height="200"></a>
+
 
     <!-- LISTS -->
 
     <h2>Lists</h2>
-
     <ul>
         <li>Banana</li>
         <li>Apple</li>
@@ -80,6 +73,12 @@
     </ul>
 
     <!-- exercise start -->
+    <ol>
+        <li>Go up</li>
+        <li>Brush your teeth</li>
+        <li>Drink coffee</li>
+        <li>Start working</li>
+    </ol>
     <!-- exercise end -->
 
     <!-- TABLES -->
@@ -88,10 +87,32 @@
 
     <a href="https://en.wikipedia.org/wiki/List_of_giant_pandas">
         Famous living giant pandas
-
     </a>
 
+    <br><br>
+
     <!-- exercise start -->
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Birth date</th>
+                <th>Current location</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Bao Bao</td>
+                <td>23 August 2013</td>
+                <td>Wolong</td>
+            </tr>
+            <tr>
+                <td>Bei Bei</td>
+                <td>22 August 2015</td>
+                <td>Bifengxia</td>
+            </tr>
+        </tbody>
+    </table>
     <!-- exercise end -->
 
     <!-- DIV & SPAN -->
@@ -99,12 +120,13 @@
     <h2>Div and span</h2>
 
     <div>One div</div>
-    <div>One div</div>
-    <div>One div</div>
+    <div>Another div</div>
+    <div>A third div</div>
 
     <span>One span</span>
-    <span>One span</span>
-    <span>One span</span>
+    <span>Another span</span>
+    <span>A third span</span>
+
 
 </body>
 
