--- a/HTML/02.html
+++ b/HTML/02.html
@@ -31,6 +31,9 @@
     <input type="url"> <!-- Will validate when you press OK -->
 
     <!-- exercise start -->
+    <input type="color">
+    <input type="file">
+    <input type="range">
     <!-- exercise end -->
 
     <h2>Checkboxes</h2>
@@ -50,6 +53,11 @@
     <br>
 
     <!-- exercise start -->
+    <h2>Radio buttons</h2>
+
+    <label>Yes<input type="radio" name="answer"></label><br>
+    <label>No<input type="radio" name="answer"></label><br>
+    <label>Don't know<input type="radio" name="answer"></label><br>
     <!-- exercise end -->
 
     <h2>Select boxes</h2>
@@ -61,6 +69,11 @@
     </select>
 
     <!-- exercise start -->
+    <select multiple>
+        <option>Banana</option>
+        <option>Tomato</option>
+        <option>Kiwi</option>
+    </select>
     <!-- exercise end -->
 
     <h2>Button</h2>
@@ -84,6 +97,7 @@
     </video>
 
     <!-- exercise start -->
+    <audio controls src="Audio/t-rex-roar.mp3"></audio>
     <!-- exercise end -->
 
     <!-- FIGURE -->
