--- a/CSS/Product/01.html
+++ b/CSS/Product/01.html
@@ -1,7 +1,41 @@
-todo: skapa detta html-dokument, det ska se ut som 01.png
+<!DOCTYPE html>
+<html lang="en">
 
-Använd er av 
-- article
-- div
-- img
-- html, head, body
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>01</title>
+</head>
+
+<body>
+
+    <!-- No styling -->
+
+    <!-- exercise start -->
+    <article>
+
+        <div>
+            5kr
+        </div>
+
+        <img src="pasta-fusilli.jpg" alt="">
+
+        <div>
+            Pasta Fusilli
+        </div>
+
+        <div>
+            Barilla, 500g
+        </div>
+
+        <div>
+            KÖP
+        </div>
+
+    </article>
+    <!-- exercise end -->
+
+</body>
+
+</html>
