--- a/CSS/Product/02.html
+++ b/CSS/Product/02.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>02</title>
     <link rel="stylesheet" href="02.css">
 </head>
+
 <body>
-    
-    <!-- No styling -->
+
+    <!-- Buy button + box -->
 
     <article class="product">
 
-        <!-- <div>5 kr</div> -->
-        <img src="pasta-fusilli.jpg" alt="Ett pastapaket">
-        <div>Pasta Fusilli</div>
-        <div>Barilla, 500g</div>
-        <div class="product__buy">KÖP</div>
+        <!-- <div>
+            5kr
+        </div> -->
+
+        <img src="pasta-fusilli.jpg" alt="">
+
+        <div>
+            Pasta Fusilli
+        </div>
+
+        <div>
+            Barilla, 500g
+        </div>
+
+        <div class="product__buy">
+            KÖP
+        </div>
 
     </article>
 
 
 </body>
+
 </html>
