--- a/CSS/Product/03.html
+++ b/CSS/Product/03.html
@@ -5,19 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02</title>
-    <link rel="stylesheet" href="product.css">
+    <title>03</title>
+    <link rel="stylesheet" href="03.css">
 </head>
 
 <body>
 
-    <!-- Buy button + box -->
+    <!-- Positioning (with flex) in the product box -->
 
     <article class="product">
-
-        <div class="product__price">
-            5kr
-        </div>
 
         <img class="product__image" src="pasta-fusilli.jpg" alt="">
 
@@ -32,7 +28,7 @@
         </div>
 
         <div class="product__buy">
-            Köp
+            KÖP
         </div>
 
     </article>
