--- a/JavaScript/Email/email.html
+++ b/JavaScript/Email/email.html
@@ -30,7 +30,7 @@
                 <div class="error-message">Some error 2</div>
             </div>
 
-            <button>Ok</button>
+            <button onclick="sendForm()">Ok</button>
 
             <div class="result hidden">
                 You entered ....
@@ -40,6 +40,9 @@
 
     </div>
 
+    <script src="email.js"></script>
+
 </body>
 
 </html>
+
