--- a/JavaScript/Lab/02/actions.html
+++ b/JavaScript/Lab/02/actions.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actions</title>
-
+    <!-- Write "link:css" and press TAB => you get a link to stylesheet -->
     <link rel="stylesheet" href="actions.css">
 </head>
 
@@ -18,6 +18,14 @@
         <div class="centered-column">
 
             <div class="button-row">
+
+                <button onclick="changeHtml()">Change html</button>
+                <button onclick="changeText()">Change text</button>
+                <button onclick="highlight()">Highlight</button>
+                <button onclick="unHighlight()">Unhighlight</button>
+
+                <button onclick="hide()">Hide</button>
+                <button onclick="show()">Show</button>
             </div>
 
             <div class="result" id="my-result">
@@ -27,7 +35,7 @@
         </div>
     </div>
 
-
+    <script src="actions.js"></script>
 
 </body>
 
