--- a/JavaScript/Lab/03/add-sub.html
+++ b/JavaScript/Lab/03/add-sub.html
@@ -22,11 +22,11 @@
                 <!--
                     Use this site to find special characters, like the plus and minus sign
 
-                    https://unicode-table.com/en/search/
+                    https://symbl.cc/en/
 
                 -->
                 <button onclick="addOne()">➕</button>
-                <button onclick="substractOne()">➖</button>
+                <button onclick="subtractOne()">➖</button>
             </div>
 
             <div class="result">
