--- a/JavaScript/Lab/04/textboxes.html
+++ b/JavaScript/Lab/04/textboxes.html
@@ -15,7 +15,11 @@
     <div class="center">
         <div class="centered-column">
 
+            <input type="text" class="text1" onkeyup="render()">
+            <input type="text" disabled class="text2">
 
+            <div class="result">
+            </div>
             
 
         </div>
